<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/black">
    <item
        android:id="@+id/menu_dashboard"
        android:color="@color/purple_500"
        android:icon="@drawable/dashboard"
        android:title="@string/dashboard" />
    <item
        android:id="@+id/menu_api"
        android:color="@android:color/holo_green_dark"
        android:icon="@drawable/api"
        android:title="@string/api" />
    <item
        android:id="@+id/menu_watchlist"
        android:color="@android:color/holo_green_dark"
        android:icon="@drawable/watchlist"
        android:title="@string/watchlist" />
    <item
        android:id="@+id/menu_sequencegenerator"
        android:color="@android:color/holo_orange_dark"
        android:icon="@drawable/sequence_generator"
        android:title="@string/sequence_generator" />
    <item
        android:id="@+id/menu_user"
        android:color="#FF5252"
        android:icon="@drawable/user"
        android:title="@string/user" />
</menu>